# BoR-proof-SDK

./: .gitignore  .pre-commit-config.yaml  =1.0.0  AESTHETIC_UPGRADE_SUMMARY.md  AVALANCHE_UPDATE_COMPLETE.md  AVALANCHE_VERIFICATION_SUMMARY.md  BoR_Code_Verified_Encoding_Map_v1.0.0.md  BoR_Encoding_Specification_v1.0.0.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_GUIDE.txt  FINAL_STATUS.md  INTEGRATION_SUMMARY.md  INTERACTIVE_DASHBOARD_GUIDE.md  LLM_SANDBOX_QUICKSTART.md  MANIFEST.in  MODEL_COMPATIBILITY.txt  Makefile  PROJECT_STRUCTURE.md  PUBLISH.md  README.md  README_VISUALIZATION_SECTIONS.md  REASONING_CERTIFICATE_GUIDE.md  SECURITY.md  STEP10_TRUST_DIAGNOSTICS_STATUS.md  STEP11E_ROOT_CAUSE_DOCS_STATUS.md  STEP12A_LLM_SANDBOX_STATUS.md  STEP12B_QUICK_REFERENCE.txt  STEP12C_TAB_SYNC_COMPLETE.txt  STEP12C_TAB_SYNC_USAGE_GUIDE.txt  STEP12C_USAGE.txt  STEP2_CHANGES.md  STEP2_COMPLETE.txt  STEP3_COMPLETE.md  STEP4_COMPLETE.md  STEP5_COMPLETE.md  STEP8_INTERACTIVE_DASHBOARD_SUMMARY.md  TAB_SYNC_FIX.txt  TEST_RESULTS.md  TRUST_DIAGNOSTICS_COMPLETE_SUMMARY.md  (+53 more)
.github/workflows/: ci.yml  visual-proof.yml
bor/: __init__.py  bundle.py  cli.py  core.py  decorators.py  exceptions.py  hash_utils.py  store.py  subproofs.py  verify.py
bor_sdk.egg-info/: PKG-INFO  SOURCES.txt
docs/: BoR_Execution_Trace_Report.md  visual_proof.md
examples/: __init__.py  demo.py  demo_add_square.py  demo_pipeline.py  demo_randomness_guard.py  demo_reconcile.py  demo_verify.py
figures/: hallucination_guard.spec.json  hash_flow.spec.json  master_certificate_tree  reasoning_chain.spec.json
src/bor_consensus/: __init__.py  ledger.py  self_audit.py
src/bor_core/: README.md  __init__.py  env_utils.py  hooks.py  init_hooks.py  registry.py
src/bor_utils/: __init__.py  djson.py
tests/: __init__.py  test_avalanche.py  test_consensus_ledger.py  test_core.py  test_decorators.py  test_determinism_suite.py  test_e2_remaining_subproofs.py  test_e_subproofs_bundle.py  test_f_bundle_verify_and_trace.py  test_hash_utils.py  test_invariant_hooks.py  test_p0_init.py  test_p1_steps.py  test_p2_master.py  test_p3_verify.py  test_p4_persistence.py  test_register_hash.py  test_self_audit.py  test_store.py  test_verify.py
tools/: README.md  update_avalanche_assets.py
visual_proofs/20251109-060421/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-061009/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-061009/figures/: hallucination_guard.spec.json
visual_proofs/20251109-061151/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-061151/figures/: master_certificate_tree.spec.json
visual_proofs/20251109-061316/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-061610/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-061610/figures/: hash_flow.spec.json
visual_proofs/20251109-061911/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-062552/: manifest.json  visual_data.json  visual_proof.md  visual_verification_report.json
visual_proofs/20251109-062552/figures/: reasoning_chain.spec.json
